css/layout.css
/*  Flex Items */
.flex-items {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100%;
}

.flex-items>div {
  padding: 20px;
}

/* Flex Columns */
.flex-columns .row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

.flex-columns .column {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
}

.flex-columns .column .column-1,
.flex-columns .column .column-2 {
  height: 100%;
}

.flex-columns img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.flex-columns .column-2 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding: 30px;
}

.flex-columns h2 {
  font-size: 40px;
  font-weight: 100;
}

.flex-columns h4 {
  margin-bottom: 10px;
}

.flex-columns p {
  margin: 20px 0;
}

/* Flex grid */
.flex-grid .row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

.flex-items img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* Mobile */
@media only screen and (max-width: 900px) {
  .flex-items {
    flex-direction: column;
  }

  .flex-columns .column,
  .flex-grid .column {
    flex: 100%;
    max-width: 100%;
  }
}

